--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ h2 {
 	line-height: 1em;
 	letter-spacing: 0.2em;
 	text-transform: uppercase;
-	color: #050400;
+	color: #FFD700;
 }
 
 #countdown div span {
